<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:key="theme_switch"
        android:title="@string/pref_title_theme_switch"/>
    <CheckBoxPreference android:key="enable_no_image_mode"
        android:title="@string/pref_title_no_image_mode"
        android:summary="@string/pref_summary_no_image_mode"
        android:defaultValue="false"/>
    <Preference android:key="clear_cache"
        android:title="@string/pref_title_clear_cache"/>
    <Preference android:key="version_info"
        android:title="@string/pref_title_version_info"
        android:summary="@string/pref_summary_version_info"/>
    <Preference android:key="change_log"
        android:title="@string/pref_title_change_log"/>
    <Preference android:key="open_source_libraries"
        android:title="@string/pref_title_open_source_libraries" />
    <Preference android:key="about"
        android:title="@string/pref_title_about"/>
</PreferenceScreen>